Revision history for {{$dist->name}}:

{{$NEXT}}
  [Tests]
  - Removed clean namespace test.

v0.1.1    2020-02-14 08:24:57+00:00 Europe/London
  [Documentation]
  - Fix typo in SYNOPSIS, thanks @manwar

v0.1.0    2020-02-13 17:37:40+00:00 Europe/London
  - Initial version released.