@@ -1,6 +1,7 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.014
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
+requires "Sub::Util" => "1.40";
 requires "perl" => "v5.10.1";
 
 on 'test' => sub {
